Change to non-headless because it can't find Chat button

--- a/sample.env
+++ b/sample.env
@@ -2,4 +2,4 @@ URL = https://ku-tangtee.vercel.app/
 EMAIL = your email address
 PASSWORD = your password
 SEARCH_KEYWORD = your joined activity that you want to search using keyword
-HEADLESS = True
+HEADLESS = False
